# DATX02-DIT561

./: .gitignore  CHANGELOG.md  Example.hs  LICENSE  Makefile  README.md  build-script.sh  daison-frontend.cabal  daison.cabal  test.hs
.cabal-sandbox/: add-source-timestamps
.github/workflows/: haskell.yaml  release.yaml
c/: sqlite3Btree.c
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
haskell/Database/: Daison.hs
haskell/Database/Daison/: FFI.hsc  Serialize.hs
java/org/daison/: CloseableIterable.java  DaisonDataFields.java  DaisonDataType.java  DaisonException.java  DaisonMaybeField.java  DataStream.java  Database.java  Getter.java  IdKey.java  IdValue.java  IdValueKey.java  ReadWriteTransaction.java
src/: A.hs  B.hi  B.hs  Main.hs
src/Frontend/: Base.hs  Context.hs  Eval.hs  Format.hs  GHCInterface.hs  Main.hs  Run.hs  Typecheck.hs  Util.hs
src/daison/: Example.hs  README.md  daison.cabal
src/daison-frontend/: README.md  daison-frontend.cabal
src/daison-frontend/src/: Main.hs
src/daison/c/: sqlite3Btree.h
src/daison/dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes
src/daison/doc/: tutorial.md
src/daison/java/: jdaison.c
src/daison/java/org/daison/: CloseableIterator.java  Index.java  ReadTransaction.java  SerializationException.java  Table.java
test/: README.md  Tests.hs  UnitTests.hs
test/specs/: F10.md  F11.md  F12.md  F2.md  F3.md  F4.md  F5.md  F6.md  F7.md  F8.md  F9.md  Template.md
test/specs/data/: test.db
test/specs/examples/: F10Example.hs
tests/: README.md  Tests.hs  UnitTests.hs
tests/specs/: F1.md  F10.md  F11.md  F12.md  F13.md  F2.md  F5.md  F6.md  F8.md  F9.md  Template.md
(+2 files in other folders)
